@@ -137,7 +137,8 @@ return array (
 	'feed_url'			=> 'Feed URL',
 	'articles'			=> 'articles',
 	'number_articles'		=> 'Number of articles',
-	'keep_history'			=> 'Keep old articles?',
+	'keep_history'			=> 'Minimum number of articles to keep',
+	'keep_history_help'		=> 'Set to -1 to keep everything',
 	'categorize'			=> 'Store in a category',
 	'truncate'			=> 'Delete all articles',
 	'advanced'			=> 'Advanced',
@@ -157,13 +158,15 @@ return array (
 
 	'general_configuration'		=> 'General configuration',
 	'language'			=> 'Language',
-	'delete_articles_every'		=> 'Remove articles after',
 	'month'				=> 'months',
 	'default_user'			=> 'Username of the default user (maximum 16 alphanumeric characters)',
 	'persona_connection_email'	=> 'Login mail address (use <a href="https://persona.org/">Mozilla Persona</a>)',
 	'allow_anonymous'		=> 'Allow anonymous reading',
 	'auth_token'			=> 'Authentication token',
 	'explain_token'			=> 'Allows to access RSS output without authentication.<br />%s?token=%s',
+	'archiving_configuration'	=> 'Archiving configuration',
+	'delete_articles_every'	=> 'Remove articles after',
+	'archiving_configuration_help'	=> 'More options are available in the individual stream settings',
 	'reading_configuration'		=> 'Reading configuration',
 	'articles_per_page'		=> 'Number of articles per page',
 	'default_view'			=> 'Default view',
