@@ -137,7 +137,8 @@ return array (
 	'feed_url'			=> 'URL du flux',
 	'articles'			=> 'articles',
 	'number_articles'		=> 'Nombre d’articles',
-	'keep_history'			=> 'Garder les vieux articles ?',
+	'keep_history'			=> 'Nombre minimum d’articles à conserver',
+	'keep_history_help'		=> 'Mettre à -1 pour tout conserver',
 	'categorize'			=> 'Ranger dans une catégorie',
 	'truncate'			=> 'Supprimer tous les articles',
 	'advanced'			=> 'Avancé',
@@ -157,13 +158,16 @@ return array (
 
 	'general_configuration'		=> 'Configuration générale',
 	'language'			=> 'Langue',
-	'delete_articles_every'		=> 'Supprimer les articles après',
+	
 	'month'				=> 'mois',
 	'default_user'			=> 'Nom de l’utilisateur par défaut (16 caractères alphanumériques maximum)',
 	'persona_connection_email'	=> 'Adresse courriel de connexion (utilise <a href="https://persona.org/">Mozilla Persona</a>)',
 	'allow_anonymous'		=> 'Autoriser la lecture anonyme',
 	'auth_token'			=> 'Jeton d’identification',
 	'explain_token'			=> 'Permet d’accéder à la sortie RSS sans besoin de s’authentifier.<br />%s?output=rss&token=%s',
+	'archiving_configuration'	=> 'Configuration de l’archivage',
+	'delete_articles_every'	=> 'Supprimer les articles après',
+	'archiving_configuration_help'	=> 'D’autres options sont disponibles dans la configuration individuelle des flux',
 	'reading_configuration'		=> 'Configuration de lecture',
 	'articles_per_page'		=> 'Nombre d’articles par page',
 	'default_view'			=> 'Vue par défaut',
