@@ -32,13 +32,6 @@
 		</div>
 
 		<div class="form-group">
-			<label class="group-name" for="old_entries"><?php echo Minz_Translate::t ('delete_articles_every'); ?></label>
-			<div class="group-controls">
-				<input type="number" id="old_entries" name="old_entries" value="<?php echo $this->conf->oldEntries (); ?>" /> <?php echo Minz_Translate::t ('month'); ?>
-			</div>
-		</div>
-
-		<div class="form-group">
 			<label class="group-name" for="mail_login"><?php echo Minz_Translate::t ('persona_connection_email'); ?></label>
 			<?php $mail = $this->conf->mailLogin (); ?>
 			<div class="group-controls">
@@ -59,7 +52,27 @@
 				<?php echo FreshRSS_Themes::icon('help'); ?> <?php echo Minz_Translate::t('explain_token', Minz_Url::display(null, 'html', true), $token); ?>
 			</div>
 		</div>
-	
+
+		<legend><?php echo Minz_Translate::t ('archiving_configuration'); ?></legend>
+
+		<div class="form-group">
+			<label class="group-name" for="old_entries"><?php echo Minz_Translate::t ('delete_articles_every'); ?></label>
+			<div class="group-controls">
+				<input type="number" id="old_entries" name="old_entries" list="list_months" min="1" max="1200" value="<?php echo $this->conf->oldEntries (); ?>" /> <?php echo Minz_Translate::t ('month'); ?>
+				<datalist id="list_months">
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>6</option>
+					<option>12</option>
+					<option>18</option>
+					<option>24</option>
+					<option>36</option>
+				</datalist><br />
+				<?php echo FreshRSS_Themes::icon('help'); ?> <?php echo Minz_Translate::t('archiving_configuration_help'); ?>
+			</div>
+		</div>
+
 		<legend><?php echo Minz_Translate::t ('reading_configuration'); ?></legend>
 
 		<div class="form-group">
