@@ -52,6 +52,9 @@
 				</select>
 			</div>
 		</div>
+
+		<legend><?php echo Minz_Translate::t ('archiving_configuration'); ?></legend>
+
 		<div class="form-group">
 			<label class="group-name"></label>
 			<div class="group-controls">
@@ -64,10 +67,21 @@
 			<label class="group-name"><?php echo Minz_Translate::t ('number_articles'); ?></label>
 			<div class="group-controls">
 				<span class="control"><?php echo $this->flux->nbEntries (); ?></span>
-				<label class="checkbox" for="keep_history">
-					<input type="checkbox" name="keep_history" id="keep_history" value="yes"<?php echo $this->flux->keepHistory () == 'yes' ? ' checked="checked"' : ''; ?> />
-					<?php echo Minz_Translate::t ('keep_history'); ?>
-				</label>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="group-name" for="keep_history"><?php echo Minz_Translate::t ('keep_history'); ?></label>
+			<div class="group-controls">
+				<input type="number" name="keep_history" id="keep_history" list="old_values" min="-1" max="1000000" value="<?php echo $this->flux->keepHistory(); ?>" />
+				<datalist id="old_values">
+					<option value="0">0</option>
+					<option value="10">10</option>
+					<option value="100">100</option>
+					<option value="1000">1 000</option>
+					<option value="10000">10 000</option>
+					<option value="-1">∞</option>
+				</datalist>
+				<?php echo FreshRSS_Themes::icon('help'); ?> <?php echo Minz_Translate::t ('keep_history_help'); ?>
 			</div>
 		</div>
 		<div class="form-group">
